# water_cooling_controller

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  main.py  out.txt  params.json
ble_app/: __init__.py  config.py  core.py  gui.py  main.py  presentation.py  pytest.ini  requirements.txt
ble_app/core_logic/: __init__.py  api.py  base.py  codec.py  control.py  crypto.py  metrics.py  models.py  pairing.py  protocol.py  storage.py
ble_app/gui_logic/: __init__.py  app.py  constants.py  metrics_chart.py  window_actions.py  window_lists.py  window_params.py  window_setup.py  window_updates.py  worker_flows.py  worker_runtime.py
ble_app/tests/: conftest.py  requirements.txt  test_codec_params.py  test_config.py  test_integration_ble.py  test_metrics_snapshot.py  test_presentation.py
mk/: CMakeLists.txt
mk/ble_protocol/: CMakeLists.txt  app_tasks.c  ecdh.c  fan_control.c  fan_control.h  fan_status_ble.h  gap.c  gatt.c  host_verify.h  main.c  metrics_ble.c  metrics_ble.h  operation_manager.c  operation_manager.h  operation_status_ble.c  operation_status_ble.h  pair_mode.c  pair_state.h  params.c  params.h  rgb.c  rgb.h  state.c  state.h  storage.c  storage.h  uuid.c  uuid.h
mk/ble_protocol/app/: app_tasks.c  app_tasks.h  main.c
mk/ble_protocol/ble/: access.c  device_status_ble.c  device_status_ble.h  fan_status_ble.c  gap.c  gap.h  gatt.c  gatt.h  metrics_ble.c  metrics_ble.h  uuid.c  uuid.h
mk/ble_protocol/control/: device_status.c  device_status.h  fan_control.c  fan_control.h  operation_manager.c  operation_manager.h  params.c  params.h
mk/ble_protocol/hw/: overcurrent_monitor.c  overcurrent_monitor.h  rgb.c  status_led.c  status_led.h
mk/ble_protocol/pairing/: conn_guard.c  conn_guard.h  crypto.c  crypto.h  ecdh.h  pair_mode.c  pair_mode.h  pair_state.c  state.c  state.h  storage.c  storage.h
mk/ble_protocol/test/: test_conn_guard.c  test_fsm.c  test_pair_state.c  test_status_led.c  test_storage.c
mk/i2c_bus/: CMakeLists.txt  shared_i2c_bus.c  shared_i2c_bus.h
mk/main/: CMakeLists.txt  access.c  access.h  app_tasks.c  app_tasks.h  conn_guard.c  crypto.c  crypto.h  gap.c  gatt.c  host_verify.c  main.c  rgb.c  rgb.h  state.c  state.h  storage.c  storage.h  uuid.c
mk/main/test/: test_conn_guard.c  test_pair_state.c
mk/metrics/: CMakeLists.txt  ads1115.c  ads1115.h  ina226.c  ina226.h  metrics.c  metrics.h
mk/metrics/test/: test_ads1115.c
pico/: main.py
raspberry/: app.py  pwm_test.py  requirements.txt
tests/: integration_ble.py
