idf_component_register(SRCS
                       "main.c"
                       "app_tasks.c"
                       "crypto.c"
                       "ecdh.c"
                       "gatt.c"
                       "gap.c"
                       "state.c"
                       "storage.c"
                       "uuid.c"
                       INCLUDE_DIRS ".")
